better build, added tests

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,11 @@
-executable('MNT',
+SRC_FILES = [
     'main.cpp',
     'Matrix.cpp',
     'mnist_reader.cpp',
+    'Network.cpp'
+]
+
+executable('MNT',
+    SRC_FILES,
     include_directories: include_dirs
 )
