--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 project('tutorial', 'cpp', default_options : ['cpp_std=c++17']) 
 
 include_dirs = include_directories('include')
+src_dirs = include_directories('src')
 
 subdir('src')
+subdir('test')
