--- a/test/meson.build
+++ b/test/meson.build
@@ -14,6 +14,7 @@ network_test = executable(
     'Network_test.cpp', # tests source files to be compiled,
     '../src/Network.cpp',
     '../src/Matrix.cpp',
+    '../src/mnist_reader.cpp',
     include_directories : [include_dirs, src_dirs]  # need to add src to help to find headers
     ) # link test executable with previously declared shared library :code:`libuuid`
 
