changed wrong bias initialisation

--- a/meson.build
+++ b/meson.build
@@ -3,5 +3,5 @@ project('tutorial', 'cpp', default_options : ['cpp_std=c++17'])
 include_dirs = include_directories('include')
 src_dirs = include_directories('src')
 
-# subdir('src')
+subdir('src')
 subdir('test')
